fix: contracst of dark mode primary color

--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,8 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.42 0.13 250);
-  --primary-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.65 0.15 250);
+  --primary-foreground: oklch(0.141 0.005 285.823);
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
   --primary-red: oklch(0.628 0.221 27.542);
